--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,24 +12,8 @@
 </head>
 
 <body>
-    <div class="container" style="padding-top: 100px">
-        <form action="/register" method="POST">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-                <label for="metamaskInput">Metamask Input</label>
-                <input name="username" class="form-control" id="metamaskInput" placeholder="Enter Eth public address">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
-        </form>
+    <div class="jumbotron container" style="padding-top: 100px">
+        <h1>Profile Page</h1>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
